--- a/Register.html
+++ b/Register.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Register</title>
+        <title>Register Account</title>
     </head>
     <body>
-        <h1>Register</h1>
+        <h1>Register Account</h1>
+        <input type="text" placeholder="E-Mail:">  <br>
+        <input type="text" placeholder="Username:">  <br>
+        <input type="password" placeholder="Password:">  <br>
+        <input type="password" placeholder="Verify Password:">  <br>
+
+        <input type="button" value="REGISTER" onclick="location.href='Thank-You-Registration.html'"> <br> <br>
 
         <a href="index.html">HOME</a>
     </body>
