--- a/Sign-In.html
+++ b/Sign-In.html
@@ -6,6 +6,16 @@
     <body>
         <h1>Sign In</h1>
         <h2>Enter User Info</h2>
+        <input type="text" placeholder="Username:">  <br>
+        <input type="password" placeholder="Password:">  <br>
+
+        <input type="button" value="Log In"> <br>
+        <br><br>
+        <div>Forgot Log In?</div>
+        <input type="button" value="Forgot Password"> <br>
+        <input type="button" value="Forgot Username">
+
+        <br><br>
         <a href="index.html">HOME</a>
     </body>
 </html>
